[fix] Fix compile error